--- a/Proyecto/entregable-fe3/public/index.html
+++ b/Proyecto/entregable-fe3/public/index.html
@@ -39,5 +39,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <footer style="text-align:center; margin-top: 6rem; ">Made with ❤️ Entregable Front-End 3 por Lara Converso</footer>
   </body>
 </html>
